# pydantic-ai-telegram

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: minimal_bot.py
pydantic_ai_telegram/: __init__.py  api.py  binary_handler.py  bot.py  cli.py  conversation.py  handlers.py  models.py
pydantic_ai_telegram/transcription/: __init__.py  base.py  openai_api.py  whisper_local.py
tests/: __init__.py  test_api.py  test_binary_handler.py  test_bot.py  test_conversation.py  test_models.py
